bdr.BDR.scala.error
Erreur de compilation :
BDR:9: error: not found: value fini
                 else {fini=true}
                       ^